Fix issues on mobile

--- a/src/styl/sections/portfolio.styl
+++ b/src/styl/sections/portfolio.styl
@@ -324,12 +324,12 @@
     background-image url(../img/portfolio/portfolio_cierralo.png)
   .card-lg-bg5
     background-image url(../img/portfolio/portfolio_rer.png)
-  .card-sm-bg14,
+  .card-sm-bg15,
+  .card-sm-bg13,
   .card-sm-bg12,
   .card-sm-bg10,
   .card-sm-bg8,
   .card-sm-bg6,
-  .card-sm-bg4,
   .card-sm-bg2,
   .card-md-bg14,
   .card-md-bg12,
@@ -339,20 +339,22 @@
   .card-md-bg4,
   .card-md-bg2,
   .card-lg-bg10,
-  .card-lg-bg8,
+  .card-lg-bg9,
   .card-lg-bg6,
   .card-lg-bg4,
   .card-lg-bg2
     margin 7px 0 7px 7px
 
-  .card-sm-bg15,
-  .card-sm-bg13,
+  .card-sm-bg16,
+  .card-sm-bg14,
   .card-sm-bg11,
   .card-sm-bg9,
   .card-sm-bg7,
   .card-sm-bg5,
+  .card-sm-bg4,
   .card-sm-bg3,
   .card-sm-bg1,
+  .card-md-bg13,
   .card-md-bg11,
   .card-md-bg9,
   .card-md-bg7,
@@ -360,7 +362,7 @@
   .card-md-bg3,
   .card-md-bg1,
   .card-lg-bg11,
-  .card-lg-bg9,
+  .card-lg-bg8,
   .card-lg-bg7,
   .card-lg-bg5,
   .card-lg-bg3,
